# elijah-cloudlet

./: .gitignore  .gitmodules  CHANGES.md  CREDITS  MANIFEST.in  README  README.md  README.rst  TODO.md  fabfile.py  setup.py
Android-client/: .classpath  AndroidManifest.xml
App-MOPED/: Makefile  README-MOPED2  moped_server  moped_server.cpp
App-MOPED-Disk/: README-MOPED2  moped_server  moped_server.cpp
Doc/: IRS-install  ISR-readme  ISR_ssh_connetion_info
ISR/src/: LICENSE.Eclipse  Makefile  Makefile.am  Makefile.in  README.server  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  mkrevision.sh  vmm.mk
ISR/src-mock/: CHANGES  README  acinclude.m4  aclocal.m4  libtool  mkrevision.mk  subst.mk
ISR/src-mock/conf/: Makefile.am  config  magic  openisr-client.completion  openisr-client.completion.in
ISR/src-mock/crypto/: Makefile.am  aes.lo  cbc.c  cbc.lo  compress.lo  ecb.c  hash.lo  hmac.lo  internal.h  isrcrypto.h  lzf-stream.c  lzf-stream.lo  lzf.c  md5-compress.lo  md5.lo  pad.lo  sha1-compress-amd64.lo  sha1-compress.c  sha1.c  sha1.lo  zlib.c  zlib.lo
ISR/src-mock/crypto/.deps/: compress.Plo  ecb.Plo  hash.Plo  hmac.Plo  lzma.Plo  mac.Plo  md5-compress.Plo  pad.Plo  random.Plo  util.Plo
ISR/src-mock/crypto/.libs/: libisrcrypto.la  libisrcrypto.lai
ISR/src-mock/crypto/test/: Makefile.am  run_vectors.c  vectors.h  vectors_compress.h
ISR/src-mock/parcelkeeper/: Makefile  Makefile.am  cache.c  fuse.c  fuse_defs.h  fuse_image.c  parcelcfg.c  parcelkeeper  revision.c  transport.c
ISR/src-mock/parcelkeeper/.deps/: cache_modes.Po  fuse.Po  fuse_image.Po  hoard.Po  hoard_modes.Po  log.Po  parcelcfg.Po  revision.Po
ISR/src-mock/parcelkeeper/.libs/: parcelkeeper
ISR/src-mock/sqlite/: Makefile  Makefile.am  Makefile.in  libisrsql.la  libsqlitepriv.la  sql.h  wrapper.c
ISR/src-mock/sqlite/.deps/: libsqlitepriv_la-sqlite3.Plo  wrapper.Plo
ISR/src-mock/sqlite/.libs/: libisrsql.la  libisrsql.lai
ISR/src-mock/tools/: Makefile.am  dirtometer.c  query.c  viewer  viewer.in
ISR/src-mock/tools/.deps/: blobtool-blobtool.Po
ISR/src-mock/tools/.libs/: blobtool  query
ISR/src-mock/vmm/: Makefile  Makefile.am  kvm  kvm.in  none  shell  virtualbox  vmware
ISR/src/client/: Makefile  Makefile.in  isr  isr.1  isr.in
ISR/src/conf/: Makefile  Makefile.in
ISR/src/crypto/: Makefile  Makefile.in  aes.c  aes_tab.h  cipher.c  cipher.lo  compress.c  ecb.lo  hash.c  hmac.c  libisrcrypto.la  lzf.lo  lzma.c  lzma.lo  mac.c  mac.lo  md5-compress.c  md5.c  pad.c  random.c  random.lo  sha1-compress-amd64.S  sha1-compress-ia32.S  util.c  util.lo
ISR/src/crypto/.deps/: aes.Plo  cbc.Plo  cipher.Plo  lzf-stream.Plo  lzf.Plo  md5.Plo  sha1-compress-amd64.Plo  sha1.Plo  zlib.Plo
ISR/src/crypto/.libs/: libisrcrypto.so.0.0.0
ISR/src/crypto/test/: Makefile  Makefile.in  compress.c  vectors_aes.h  vectors_hmac.h  vectors_md5.h  vectors_sha1.h
ISR/src/libutil/: Makefile.am  internal.h  libisrutil.la
ISR/src/libutil/.deps/: chunk.Plo
ISR/src/libutil/.libs/: libisrutil.la  libisrutil.lai
ISR/src/locksrv/: Makefile.am  README  isr_shell.c  srv_catlog.pm  srv_commit.pm  srv_lock.pm  srv_ls.pm  srv_rollback.pm
ISR/src/parcelkeeper/: Makefile.in  cache_modes.c  cmdline.c  defs.h  fuse_stats.c  hoard.c  hoard_modes.c  log.c  main.c  parcelkeeper  util.c
ISR/src/parcelkeeper/.deps/: cache.Po  cmdline.Po  fuse_stats.Po  main.Po  transport.Po  util.Po
ISR/src/parcelkeeper/.libs/: parcelkeeper
ISR/src/sqlite/: README  libsqlitepriv_la-sqlite3.lo  sqlite3.c  wrapper.lo
ISR/src/sqlite/.libs/: libisrsql.so.0.0.0  libsqlitepriv.la
ISR/src/tools/: Makefile  Makefile.in  blobtool  blobtool.c  dirtometer  disktool.c  hoardtest.c  query  viewer  viewer.in
ISR/src/tools/.deps/: dirtometer-dirtometer.Po  query-query.Po
ISR/src/vmm/: Makefile.in  kvm  kvm.in  none.in  shell.in  virtualbox.in  vmm.pm  vmm.py  vmware.in
Script/: access_log_mobile  cloudet.py  cloudlet.py  cloudlet_cloud.py  decomp_compare.py  isr_run.py  isr_ssh_mock.py  log_parser.py  log_web_access.py  run_snapshot_test.py  run_vm.py  traffic_shaping  vnc_viewer
Server/: .cproject  log-20111130-194535  log-20111130-194535.script
Server/Debug/: cloudlet_server  log-20111201-104915  log-20111201-104915.script  log-20111201-133222  log-20111201-133222.script  log-20111201-135633  log-20111201-135633.script  log-20111201-140909  log-20111201-140909.script  log-20111201-142559  log-20111201-142559.script  log-20111201-150058  log-20111201-150058.script  log-20111201-150703  log-20111201-150703.script  log-20111201-151606  log-20111201-151606.script  log-20111201-153033  log-20111201-153033.script  log-20111201-153747  log-20111201-153747.script  log-20111201-154326  log-20111201-154326.script  log-20111201-172838  log-20111201-172838.script  log-20111201-173233  log-20111201-173233.script  log-20111201-173448  log-20111201-173448.script  log-20111205-143610  log-20111205-143610.script  log-20111205-164643  log-20111205-164643.script  log-20111205-174904  log-20111205-174941  log-20111205-174941.script  log-20111213-171043  log-20111213-171043.script  log-20111213-171820  log-20111213-171820.script  (+68 more)
Server/config/: FACE_VM.json  MOPED_DISK_VM.json  MOPED_VM.json  NULL_VM.json  SPEECH_VM.json  Ubuntu_VM.json  VM_config.json  Window_VM.json
Server/src/: CloudletServer.c  protocol.h
VM-App/App-MOPED/: moped_server
VM-App/App-MOPED-Disk/: moped_server  moped_server.cpp
deploy/: deploy.sh
doc/: FAQ  ISR-readme  protocol  protocol.md  protocol.old
lib/free_mem_scan/: Makefile  linux-configs-3.2.0-29-virtual.h  linux-headers-3.2.0-29-virtual.h
lib/qemu-kvm/: arch_init.c  build  qemu-config.h  qemu-options.hx  vl.c
lib/vmnetx/: .gitignore  Makefile.am  configure.ac
lib/vmnetx/vmnetfs/: bitmap.c  fuse-image.c  fuse-stream.c  vmnetfs-private.h  vmnetfs.c
openstack/: .gitignore  README.md  TODO.md  fabfile.py  svirt-profile
openstack/api/: cloudlet.py  cloudlet_api.py
openstack/client/: nova_client.py  relay_server.py
src/: .gitignore
test/: test_synthesis.py
(+837 files in other folders)
